--- a/src/index.html
+++ b/src/index.html
@@ -35,15 +35,19 @@
     <input type="text" placeholder="Bérlő neve" class="form-control" value="Mari">
     </div>
     <div class="mt-0">
-        <input type="radio" id="cusRenter"
-        name="customer" class="form-check-input">
-        <label for="cusRenter" class="form-check-label">Albérlő</label>
-    </div>
-    <div class="mt-0">
         <input type="radio" id="cusSubrenter"
         name="customer" class="form-check-input">
-        <label for="cusSubrenter" class="form-check-label">Bérlő</label>
+        <label for="cusSubrenter" class="form-check-label">Albérlő</label>
     </div>
+    <div class="mt-0">
+        <input type="radio" id="cusRenter"
+        name="customer" class="form-check-input">
+        <label for="cusRenter" class="form-check-label">Bérlő</label>
+    </div>
+</div>
+<div class="aligment-center">
+    <button class="btn btn-primary">Értékelés</button>
+
 </div>
     </div>
    </div>
